--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .idea
 .DS_Store
-mariadb/data/*
-mariadb/logs/*
-mariadb/conf/*
+docker/mariadb/data/*
+docker/mariadb/logs/*
+docker/mariadb/conf/*
+docker/phpmyadmin/*
 !mariadb/data/.gitignore
 !mariadb/logs/.gitignore
 !mariadb/conf/.gitignore
